[project]
name = "medtriage-env"
version = "0.1.0"
description = "AI Medical Triage OpenEnv Project"
authors = [{ name = "Avimanyu", email = "avimanyu8008@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "gradio"
]

[tool.openenv]
entrypoint = "inference.py"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"